--- a/Bookstore/Views/Account/Register.cshtml
+++ b/Bookstore/Views/Account/Register.cshtml
@@ -18,6 +18,43 @@
                   class="text-danger"></span>
         </div>
     </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2"><label>Firstname:</label></div>
+        <div class="col-sm-4">
+            <input type="text" asp-for="Firstname"
+                   class="form-control" />
+        </div>
+        <div class="col">
+            <span asp-validation-for="Firstname"
+                  class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2"><label>Lastname:</label></div>
+        <div class="col-sm-4">
+            <input type="text" asp-for="LastNames"
+                   class="form-control" />
+        </div>
+        <div class="col">
+            <span asp-validation-for="LastNames"
+                  class="text-danger"></span>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-2"><label>Email:</label></div>
+        <div class="col-sm-4">
+            <input type="text" asp-for="Email"
+                   class="form-control" />
+        </div>
+        <div class="col">
+            <span asp-validation-for="Email"
+                  class="text-danger"></span>
+        </div>
+    </div>
+
     <div class="form-group row">
         <div class="col-sm-2"><label>Password:</label></div>
         <div class="col-sm-4">
